--- a/trunk/Informe/todo.tex
+++ b/trunk/Informe/todo.tex
@@ -38,7 +38,7 @@ Este diagrama tambien nos da otra mirada del alcance y expectativas del software
 \begin{figure}[h]
 	\centering
 		\includegraphics[scale=0.38]{img/dcCasino.png}
-	\caption{Diagrama de Objetivos \label{fig:doCasino}}
+	\caption{Diagrama de Objetivos \label{fig:dcCasino}}
 \end{figure}
 
 \begin{framed}
@@ -46,14 +46,6 @@ Este diagrama tambien nos da otra mirada del alcance y expectativas del software
 \depto Todas las interacciones de los agentes con el sistema han sido asignadas a uno o mas Casos de Uso que explicaran de forma mas detallada dichas interacciones. De esta manera podemos garantizar que las interacciones mas relevantes del sistema seran correctamente detalladas
 
 \end{framed}
-
-
-
-
-
-
-
-
 
 \subsection{Lista de Requerimientos}
 
@@ -169,7 +161,155 @@ Y asi volver al modo normal. Ver caso de uso: \textcolor{red}{falta nombre CU y 
                                             
  %asi como la ocurrencia de la jugada feliz y todosponen.
 
-\subsection{}
+\subsection{Pago de jugadas y premios}
+
+Se explicaran aqui con detalle como se refleja el pago de apuestas en el modelo propuesto (Modelo de Clases)\\
+\textbf{NOTA: } Esta seccion esta dirigida a solo a lectores con conocimientos de modelo de clases conceptuales y OCL. 
+
+\subsubsection{Pago de una jugada tragamonedas}
+
+\begin{framed}
+
+\depto Notese que una jugada tragamonedas solo tiene una apuesta que resolver.
+
+\begin{verbatim}
+
+context: pagarJugadaTraga(j:JugadaTragamonedas):void
+pre: j.estado = EstadoAp:activa
+post: 
+    -- pago resultado jugada y pago pozo progresivo y reseteo pozo progresivo
+    pagarJugadaTragaBasica(j)
+    -- cobro porcentaje jugada todos ponen
+    cobrarJugadaToposPonen(j)
+    -- pago jugada feliz y reseteo pozo feliz
+    pagarJugadaFeliz(j)
+    
+    if damePremioTraga(j) <> 0
+    then 
+        j.estado = EstadoAp:Ganada
+    else
+        j.estado = EstadoAp:Perdida
+        
+    j.apuestaTragamonedas.retribucion = j.hechaPor.saldo - j.hechaPor.saldo@pre
+
+
+-- si la jugada es todos ponen decremento saldo jugador e incremento pozo feliz
+pagarJugadaFeliz(j:JugadaTragamonedas):void
+pre:    j.estado = EstadoAp:activa
+post:   let tipoJugada = j.tipoDeJugada
+
+    if tipoJugada.oclisTypeOf(Feliz)
+        j.hechaPor.saldo = j.hechaPor.saldo@pre + oclAsType(Feliz).pozoFeliz.monto
+        oclAsType(Feliz).pozoFeliz.monto = 0
+    endif
+
+
+-- si la jugada es todos ponen decremento saldo jugador e incremento pozo feliz
+cobrarJugadaToposPonen(j:JugadaTragamonedas):void
+pre:    j.estado = EstadoAp:activa
+post:    let tipoJugada = j.tipoDeJugada
+
+    if tipoJugada.oclisTypeOf(TodosPonen)
+    then 
+        j.hechaPor.saldo = 
+
+            j.hechaPor.saldo@pre +
+            (damePremioTraga(j) + damePremioProgesivo(j)) * 
+            100 / oclAsType(TodosPonen).porcentaje
+        
+        oclAsType(TodosPonen).pozoFeliz.monto = 
+
+            oclAsType(TodosPonen).pozoFeliz.monto@pre + 
+            ((damePremioTraga(j) + damePremioProgesivo(j)) * 
+            100 / oclAsType(TodosPonen).porcentaje)
+            
+    endif
+
+
+
+-- incremento saldo jugados de jugada y pozo progresivo (si corresponde)
+-- decremento saldo casino
+-- decremento pozo (si corresponde)
+pagarJugadaTragaBasica(j:JugadaTragamonedas):void
+pre:    j.estado = EstadoAp:activa
+post:    
+    let jornada = Jornada.allInstances->asSecuence->first()
+
+    j.hechaPor.saldo = j.hechaPor.saldo@pre + (damePremioTraga(j) +
+             damePremioProgesivo(j))
+    jornada.saldo = jornada.saldo@pre - cualEsElPrepmio(j)
+    if damePremioProgesivo(j) <> 0
+    then
+        PozoProgresivo.allInstances()->asSecuence()->first().monto = 0
+    endif
+
+
+-- devuelve el valor del premio correspondiente a la jugada
+damePremioTraga(j:JugadaTagamonesas):Numero
+pre:    
+post:    let conjRes:Collection  = select(    r |     r.res1 = j.res1 and
+                        r.res2 = j.res2 and
+                        r.res3 = j.res2 and
+                        r.cantMonedas = j.apuestaTragamonesas.cantMonedas) 
+    let precioFicha = j.mesaTragamonedas.valorFicha
+
+    if not(conjRes->isEmpty()) then
+        result = conjRes->asSecuence()->first().ganMonedas * precioFicha 
+    else
+        result = 0
+
+    endif 
+
+
+-- devuelve el valor del premio progresivo correspondiente a la jugada
+damePremioProgesivo(j:JugadaTagamonesas):Numero
+pre:    true
+post:    let conjRes:Collection  = select(    r |     r.res1 = j.res1 and
+                        r.res2 = j.res2 and
+                        r.res3 = j.res2 and
+                        r.cantMonedas = j.apuestaTragamonesas.cantMonedas) 
+    let precioFicha = j.mesaTragamonedas.valorFicha
+
+    if not(conjRes->isEmpty()) then
+        if     j.res1 = Fruta::Dinosaurio and
+            j.res2 = Fruta::Dinosaurio and
+            j.res3 = Fruta::Dinosaurio and
+            j.mesaTragamonedas.CantPalancasMax = 3
+        then
+            result = j.mesaTragamonedas.pozoProgresivo.monto * precioFicha 
+        else
+            result = 0
+        endif
+    else
+        result = 0
+    endif 
+    
+\end{verbatim}
+
+\end{framed}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -182,7 +322,7 @@ Y asi volver al modo normal. Ver caso de uso: \textcolor{red}{falta nombre CU y 
 %Ilustraremos los fenomenos esenciales entre los distintos \agentes involucrados, el \dominio de todo el \sistema y el \alcance del software a desarrollar.
 %
 %\begin{figure}[htp]
-%	\centering
+%    \centering
 %		\includegraphics[scale=0.5]{dc.png}
 %	\caption{Diagrama de contexto \label{fig:dc}}
 %\end{figure}
