--- a/trunk/Informe/CasinoOnline.tex
+++ b/trunk/Informe/CasinoOnline.tex
@@ -29,6 +29,7 @@
 \usepackage{pstricks}
 %\usepackage{uml} %UML
 
+\usepackage{listings}
 
 \addtolength{\topmargin}{-50pt} 
 \addtolength{\textwidth}{105pt}
